# 2024_kn240_oop_mtereshkevych

Tereshkevich/1_lab/: README.md  README4.md  anime.py  classCar.py  zvit.md
Tereshkevich/1_lab/myproject/: main.py  pyproject.toml
Tereshkevich/1_lab/pipenv_env/: .env  1.py  Pipfile  Vehicle.py  __main__.py  abstraction.py  bank.py  incapsulation.py  inheritance.py  polimorfizm.py  pypi.py  turtle.py
Tereshkevich/1_lab/poetry_env/: .gitignore  1.py  pyproject.toml
Tereshkevich/1_lab/venv_env/: 1.py
mtereshkevych/1_lab/: README.md  zvit.md
mtereshkevych/1_lab/pipenv_env/: .env  1.py  Animal.py  BankAccount.py  Pipfile  Shape.py  __main__.py  abstraction.py  bank.py  incapsulation.py  inheritance.py  polimorfism.py
mtereshkevych/1_lab/poetry_env/: pyproject.toml
mtereshkevych/1_lab/venv_env/: 1.py
