[tool.poetry]
name = "poetry-env"
version = "0.2.0"
description = "Experimenting with poetry"
authors = ["bbuhyl <bbuhyl@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
